--- a/src/main/resources/static/layout.css
+++ b/src/main/resources/static/layout.css
@@ -5,6 +5,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body, html {
     height: 100%;
     width: 100%;
@@ -13,7 +20,7 @@ body, html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: 'SUITE-Regular';
+    font-family: 'Pretendard-Regular';
 }
 
 button{
